[project]
name = "devpulse"
version = "0.1.0"
description = "GeekNews → LLM → Card News → Shorts → SNS pipeline"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pillow>=11.0.0",
    "minio>=7.2.0",
    "redis>=5.2.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
devpulse = "pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "dagster_defs"]

[tool.dagster]
module_name = "dagster_defs.definitions"
